--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@
   outline: none; }
 
 a {
-  color: #a5ce77;
+  color: #ff826e;
   font-weight: 500;
   transition: all .5s;
   -webkit-transition: all .5s;
@@ -58,7 +58,7 @@ a {
 
 a:hover
 {
-  color: #81be41 !important;
+  color: #000 !important;
 }
 
 a:not(.btn-social-icon):not(.btn-social):not(.page-link) .ion,
@@ -69,7 +69,7 @@ a:not(.btn-social-icon):not(.btn-social):not(.page-link) .fab {
   margin-left: 4px; }
 
 .bg-primary {
-  background-color: #a5ce77 !important; }
+  background-color: #ff826e !important; }
 
 .bg-secondary {
   background-color: #cdd3d8 !important; }
@@ -93,7 +93,7 @@ a:not(.btn-social-icon):not(.btn-social):not(.page-link) .fab {
   background-color: #191d21 !important; }
 
 .text-primary, .text-primary-all *, .text-primary-all *:before, .text-primary-all *:after {
-  color: #a5ce77 !important; }
+  color: #ff826e !important; }
 
 .text-secondary, .text-secondary-all *, .text-secondary-all *:before, .text-secondary-all *:after {
   color: #cdd3d8 !important; }
@@ -154,7 +154,7 @@ p, ul:not(.list-unstyled), ol {
   .custom-select:focus,
   .custom-file-label:focus {
     background-color: #fefeff;
-    border-color: #a5ce77; }
+    border-color: #ff826e; }
 
 .input-group-text,
 select.form-control:not([size]):not([multiple]),
@@ -240,7 +240,7 @@ select.form-control:not([size]):not([multiple]) {
 
 .custom-radio .custom-control-input:checked ~ .custom-control-label::before,
 .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #a5ce77 !important; }
+  background-color: #ff826e !important; }
 
 .custom-file-label {
   line-height: 2.2; }
@@ -254,7 +254,7 @@ select.form-control:not([size]):not([multiple]) {
 
 .custom-file-input:focus + .custom-file-label {
   box-shadow: none;
-  border-color: #a5ce77; }
+  border-color: #ff826e; }
   .custom-file-input:focus + .custom-file-label:after {
     border-color: transparent; }
 
@@ -307,7 +307,7 @@ select.form-control:not([size]):not([multiple]) {
     font-size: 14px; }
 
 .selectgroup-input:checked + .selectgroup-button {
-  background-color: #a5ce77;
+  background-color: #ff826e;
   color: #fff;
   z-index: 1; }
 
@@ -364,12 +364,12 @@ select.form-control:not([size]):not([multiple]) {
     transition: .3s left; }
 
 .custom-switch-input:checked ~ .custom-switch-indicator {
-  background: #a5ce77; }
+  background: #ff826e; }
   .custom-switch-input:checked ~ .custom-switch-indicator:before {
     left: calc(1rem + 1px); }
 
 .custom-switch-input:focus ~ .custom-switch-indicator {
-  border-color: #a5ce77; }
+  border-color: #ff826e; }
 
 .custom-switch-description {
   margin-left: .5rem;
@@ -399,7 +399,7 @@ select.form-control:not([size]):not([multiple]) {
   position: relative; }
 
 .imagecheck-input:focus ~ .imagecheck-figure {
-  border-color: #a5ce77; }
+  border-color: #ff826e; }
 
 .imagecheck-input:checked ~ .imagecheck-figure {
   border-color: rgba(0, 40, 100, 0.24); }
@@ -417,7 +417,7 @@ select.form-control:not([size]):not([multiple]) {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  background: #a5ce77 url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E") no-repeat center center/50% 50%;
+  background: #ff826e url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E") no-repeat center center/50% 50%;
   color: #fff;
   z-index: 1;
   border-radius: 3px;
@@ -508,13 +508,13 @@ select.form-control:not([size]):not([multiple]) {
   border-bottom: none; }
 
 .list-group-item.active {
-  background-color: #a5ce77; }
+  background-color: #ff826e; }
 
 .list-group-item.disabled {
   color: #c9d7e0; }
 
 .list-group-item-primary {
-  background-color: #a5ce77;
+  background-color: #ff826e;
   color: #fff; }
 
 .list-group-item-secondary {
@@ -572,7 +572,7 @@ select.form-control:not([size]):not([multiple]) {
   .alert:not(.alert-light) a {
     color: #fff; }
   .alert.alert-primary {
-    background-color: #a5ce77; }
+    background-color: #ff826e; }
   .alert.alert-secondary {
     background-color: #cdd3d8; }
   .alert.alert-success {
@@ -640,7 +640,7 @@ select.form-control:not([size]):not([multiple]) {
     .card .card-header h4 {
       font-size: 16px;
       line-height: 28px;
-      color: #a5ce77;
+      color: #ff826e;
       padding-right: 10px;
       margin-bottom: 0; }
       .card .card-header h4 + .card-header-action,
@@ -655,7 +655,7 @@ select.form-control:not([size]):not([multiple]) {
           .card .card-header h4 + .card-header-action .btn.active,
           .card .card-header h4 + .card-header-form .btn.active {
             box-shadow: 0 2px 6px #acb5f6;
-            background-color: #a5ce77;
+            background-color: #ff826e;
             color: #fff; }
         .card .card-header h4 + .card-header-action .dropdown,
         .card .card-header h4 + .card-header-form .dropdown {
@@ -714,7 +714,7 @@ select.form-control:not([size]):not([multiple]) {
     background-repeat: no-repeat;
     background-position: center; }
   .card.card-primary {
-    border-top: 2px solid #a5ce77; }
+    border-top: 2px solid #ff826e; }
   .card.card-secondary {
     border-top: 2px solid #cdd3d8; }
   .card.card-success {
@@ -729,7 +729,7 @@ select.form-control:not([size]):not([multiple]) {
     border-top: 2px solid #191d21; }
   .card.card-hero .card-header {
     padding: 40px;
-    background-image: linear-gradient(to bottom, #a5ce77, #a5ce77);
+    background-image: linear-gradient(to bottom, #ff826e, #ff826e);
     color: #fff;
     overflow: hidden;
     height: auto;
@@ -1006,7 +1006,7 @@ table tr:hover .table-links {
 
 /* 3.9 Nav */
 .nav-tabs .nav-item .nav-link {
-  color: #a5ce77; }
+  color: #ff826e; }
   .nav-tabs .nav-item .nav-link.active {
     color: #000; }
 
@@ -1021,10 +1021,10 @@ table tr:hover .table-links {
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #a5ce77; }
+  background-color: #ff826e; }
 
 .nav-pills .nav-item .nav-link {
-  color: #a5ce77;
+  color: #ff826e;
   padding-left: 15px !important;
   padding-right: 15px !important; }
   .nav-pills .nav-item .nav-link:hover {
@@ -1032,7 +1032,7 @@ table tr:hover .table-links {
   .nav-pills .nav-item .nav-link.active {
     box-shadow: 0 2px 6px #acb5f6;
     color: #fff;
-    background-color: #a5ce77; }
+    background-color: #ff826e; }
   .nav-pills .nav-item .nav-link .badge {
     padding: 5px 8px;
     margin-left: 5px; }
@@ -1043,18 +1043,18 @@ table tr:hover .table-links {
 
 /* 3.10 Pagination */
 .page-item .page-link {
-  color: #a5ce77;
+  color: #ff826e;
   border-radius: 3px;
   margin: 0 3px; }
 
 .page-item.active .page-link {
-  background-color: #a5ce77;
-  border-color: #a5ce77; }
+  background-color: #ff826e;
+  border-color: #ff826e; }
 
 .page-item.disabled .page-link {
   border-color: transparent;
   background-color: #f9fafe;
-  color: #a5ce77;
+  color: #ff826e;
   opacity: .6; }
 
 .page-link {
@@ -1062,7 +1062,7 @@ table tr:hover .table-links {
   background-color: #f9fafe;
   font-weight: 600; }
   .page-link:hover {
-    background-color: #a5ce77;
+    background-color: #ff826e;
     color: #fff;
     border-color: transparent; }
   .page-link:focus {
@@ -1082,7 +1082,7 @@ table tr:hover .table-links {
   .badge.badge-warning {
     color: #fff; }
   .badge.badge-primary {
-    background-color: #a5ce77; }
+    background-color: #ff826e; }
   .badge.badge-secondary {
     background-color: #cdd3d8; }
   .badge.badge-success {
@@ -1308,20 +1308,20 @@ h6 .badge {
 
 .btn-primary, .btn-primary.disabled {
   box-shadow: 0 2px 6px #acb5f6;
-  background-color: #a5ce77;
-  border-color: #a5ce77; }
+  background-color: #ff826e;
+  border-color: #ff826e; }
   .btn-primary:focus, .btn-primary.disabled:focus {
-    background-color: #81be41 !important; }
+    background-color: #000 !important; }
     .btn-primary:focus:active, .btn-primary.disabled:focus:active {
-      background-color: #81be41 !important; }
+      background-color: #000 !important; }
   .btn-primary:active, .btn-primary:hover, .btn-primary.disabled:active, .btn-primary.disabled:hover {
-    background-color: #81be41 !important; }
+    background-color: #000 !important; }
 
 .btn-outline-primary, .btn-outline-primary.disabled {
-  border-color: #a5ce77;
-  color: #a5ce77; }
+  border-color: #ff826e;
+  color: #ff826e; }
   .btn-outline-primary:hover, .btn-outline-primary:focus, .btn-outline-primary:active, .btn-outline-primary.disabled:hover, .btn-outline-primary.disabled:focus, .btn-outline-primary.disabled:active {
-    background-color: #a5ce77 !important;
+    background-color: #ff826e !important;
     color: #fff; }
 
 .btn-outline-white, .btn-outline-white.disabled {
@@ -1329,7 +1329,7 @@ h6 .badge {
   color: #fff; }
   .btn-outline-white:hover, .btn-outline-white:focus, .btn-outline-white:active, .btn-outline-white.disabled:hover, .btn-outline-white.disabled:focus, .btn-outline-white.disabled:active {
     background-color: #fff;
-    color: #a5ce77; }
+    color: #ff826e; }
 
 .btn-round {
   border-radius: 30px;
@@ -1360,7 +1360,7 @@ h6 .badge {
   color: #000 !important; }
 
 .btn-group .btn.active {
-  background-color: #a5ce77;
+  background-color: #ff826e;
   color: #fff; }
 
 .btn-progress {
@@ -1375,7 +1375,7 @@ h6 .badge {
 /* 3.13 Media */
 .media .media-right {
   float: right;
-  color: #a5ce77;
+  color: #ff826e;
   font-weight: 600;
   font-size: 16px; }
 
@@ -1463,7 +1463,7 @@ h6 .badge {
       background-color: #f2f2f2; }
     .accordion .accordion-header[aria-expanded="true"] {
       box-shadow: 0 2px 6px #acb5f6;
-      background-color: #a5ce77;
+      background-color: #ff826e;
       color: #fff; }
   .accordion .accordion-body {
     line-height: 24px; }
@@ -1519,7 +1519,7 @@ h6 .badge {
   z-index: 890;
   background-color: transparent; }
   .navbar.active {
-    background-color: #a5ce77;
+    background-color: #ff826e;
     box-shadow: rgba(103, 119, 239, 0.2) rgba(0, 0, 0, 0.03); }
 
 .navbar-bg {
@@ -1529,7 +1529,7 @@ h6 .badge {
   left: 0;
   width: 100%;
   height: 115px;
-  background-color: #a5ce77;
+  background-color: #ff826e;
   z-index: -1; }
 
 .navbar {
@@ -1730,9 +1730,9 @@ h6 .badge {
         color: #6c757d; }
         .nav-collapse .navbar-nav .nav-item .nav-link:hover {
           background-color: #fcfcfd;
-          color: #a5ce77; }
+          color: #ff826e; }
       .nav-collapse .navbar-nav .nav-item:focus > a, .nav-collapse .navbar-nav .nav-item.active > a {
-        background-color: #a5ce77;
+        background-color: #ff826e;
         color: #fff; }
   .navbar {
     left: 5px;
@@ -1778,7 +1778,7 @@ a.dropdown-item {
   font-weight: 500;
   line-height: 1.2; }
   a.dropdown-item:focus, a.dropdown-item:active, a.dropdown-item.active {
-    background-color: #a5ce77;
+    background-color: #ff826e;
     color: #fff !important; }
 
 .dropdown-divider {
@@ -1824,7 +1824,7 @@ a.dropdown-item {
       .dropdown-list .dropdown-item .dropdown-item-desc p {
         margin-bottom: 0; }
     .dropdown-list .dropdown-item:focus {
-      background-color: #a5ce77; }
+      background-color: #ff826e; }
       .dropdown-list .dropdown-item:focus .dropdown-item-desc {
         color: #fff !important; }
         .dropdown-list .dropdown-item:focus .dropdown-item-desc b {
@@ -1888,7 +1888,7 @@ a.dropdown-item {
     margin-right: 7px;
     margin-top: -6px; }
   .dropdown-flag .dropdown-item.active {
-    background-color: #a5ce77;
+    background-color: #ff826e;
     color: #fff; }
 
 @media (max-width: 575.98px) {
@@ -1907,7 +1907,7 @@ a.dropdown-item {
 
 /* 3.21 Progress Bar */
 .progress-bar {
-  background-color: #a5ce77; }
+  background-color: #ff826e; }
 
 /* 3.22 Jumbotron */
 .jumbotron {
@@ -1922,7 +1922,7 @@ a.dropdown-item {
 /* 4.1 Misc */
 :root {
   /* Colors */
-  --primary:  #a5ce77;
+  --primary:  #ff826e;
   --secondary:  #34395e;
   --success:  #47c363;
   --info:  #3abaf4;
@@ -1943,7 +1943,7 @@ body {
 
 a.bb {
   text-decoration: none;
-  border-bottom: 1px solid #a5ce77;
+  border-bottom: 1px solid #ff826e;
   padding-bottom: 1px; }
 
 .form-divider {
@@ -2101,8 +2101,8 @@ pre {
     font-size: 11px;
     text-align: center; }
     .circle-step .circle.circle-primary {
-      border-color: #a5ce77;
-      color: #a5ce77; }
+      border-color: #ff826e;
+      color: #ff826e; }
 
 .pe-none {
   pointer-events: none; }
@@ -2352,7 +2352,7 @@ pre {
     .section .section-header .section-header-back {
       margin-right: 15px; }
       .section .section-header .section-header-back .btn:hover {
-        background-color: #a5ce77;
+        background-color: #ff826e;
         color: #fff; }
     .section .section-header .section-header-button {
       margin-left: 20px; }
@@ -2375,7 +2375,7 @@ pre {
       border-radius: 5px;
       height: 8px;
       width: 30px;
-      background-color: #a5ce77;
+      background-color: #ff826e;
       display: inline-block;
       float: left;
       margin-top: 6px;
@@ -2529,7 +2529,7 @@ body.sidebar-mini .main-sidebar {
         content: initial; }
     body.sidebar-mini .main-sidebar .sidebar-menu > li.active > a {
       box-shadow: 0 4px 8px #acb5f6;
-      background-color: #a5ce77;
+      background-color: #ff826e;
       color: #fff; }
     body.sidebar-mini .main-sidebar .sidebar-menu > li ul.dropdown-menu {
       position: absolute;
@@ -2543,7 +2543,7 @@ body.sidebar-mini .main-sidebar {
       body.sidebar-mini .main-sidebar .sidebar-menu > li ul.dropdown-menu li.active > a,
       body.sidebar-mini .main-sidebar .sidebar-menu > li ul.dropdown-menu li.active > a:hover {
         color: #fff;
-        background-color: #a5ce77 !important; }
+        background-color: #ff826e !important; }
       body.sidebar-mini .main-sidebar .sidebar-menu > li ul.dropdown-menu li a {
         height: 40px;
         padding: 0 20px;
@@ -2606,7 +2606,7 @@ body.layout-2 .main-sidebar {
     body.layout-2 .main-sidebar .sidebar-menu li a.has-dropdown:after {
       right: 0; }
     body.layout-2 .main-sidebar .sidebar-menu li a:hover {
-      color: #a5ce77;
+      color: #ff826e;
       background-color: transparent; }
   body.layout-2 .main-sidebar .sidebar-menu li ul.dropdown-menu li a {
     padding-left: 34px; }
@@ -2640,7 +2640,7 @@ body.layout-3 .navbar.navbar-secondary {
   padding: 0;
   z-index: 889; }
   body.layout-3 .navbar.navbar-secondary .navbar-nav > .nav-item.active > .nav-link {
-    color: #a5ce77; }
+    color: #ff826e; }
     body.layout-3 .navbar.navbar-secondary .navbar-nav > .nav-item.active > .nav-link:before {
       left: 35px;
       right: 0; }
@@ -2679,7 +2679,7 @@ body.layout-3 .navbar.navbar-secondary {
       right: initial;
       bottom: 0;
       height: 2px;
-      background-color: #a5ce77;
+      background-color: #ff826e;
       transition: all .5s; }
     body.layout-3 .navbar.navbar-secondary .navbar-nav > .nav-item > .nav-link span {
       line-height: 74px; }
@@ -2717,7 +2717,7 @@ body.layout-3 .navbar.navbar-secondary {
       left: 200px; }
     body.layout-3 .navbar.navbar-secondary .navbar-nav > .nav-item .dropdown-menu .nav-item.active > .nav-link,
     body.layout-3 .navbar.navbar-secondary .navbar-nav > .nav-item .dropdown-menu .nav-item .nav-link:focus {
-      background-color: #a5ce77;
+      background-color: #ff826e;
       color: #fff; }
 
 body.layout-3 .main-content {
@@ -2796,7 +2796,7 @@ body.layout-3 .main-footer {
       .main-sidebar .sidebar-menu li a:hover {
         background-color: #f8fafb; }
     .main-sidebar .sidebar-menu li.active a {
-      color: #a5ce77;
+      color: #ff826e;
       font-weight: 600;
       background-color: #f8fafb; }
       .main-sidebar .sidebar-menu li.active a.has-dropdown:after {
@@ -2830,10 +2830,10 @@ body.layout-3 .main-footer {
         padding-left: 65px;
         font-weight: 400; }
         .main-sidebar .sidebar-menu li ul.dropdown-menu li a:hover {
-          color: #a5ce77;
+          color: #ff826e;
           background-color: inherit; }
       .main-sidebar .sidebar-menu li ul.dropdown-menu li.active > a {
-        color: #a5ce77;
+        color: #ff826e;
         font-weight: 600; }
       .main-sidebar .sidebar-menu li ul.dropdown-menu li a i {
         margin-top: 1px;
@@ -2866,13 +2866,13 @@ body.layout-3 .main-footer {
   margin-bottom: 40px; }
 
 body:not(.sidebar-mini) .sidebar-style-1 .sidebar-menu li.active a {
-  background-color: #a5ce77;
+  background-color: #ff826e;
   color: #fff; }
 
 body:not(.sidebar-mini) .sidebar-style-1 .sidebar-menu li.active ul.dropdown-menu li a {
   color: #e8ebfd; }
   body:not(.sidebar-mini) .sidebar-style-1 .sidebar-menu li.active ul.dropdown-menu li a:hover {
-    background-color: #a5ce77;
+    background-color: #ff826e;
     color: #fff; }
 
 body:not(.sidebar-mini) .sidebar-style-1 .sidebar-menu li.active ul.dropdown-menu li.active a {
@@ -2890,7 +2890,7 @@ body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu > li.active > a {
     transform: translateY(-50%);
     height: 25px;
     width: 4px;
-    background-color: #a5ce77; }
+    background-color: #ff826e; }
 
 body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu li.active ul.dropdown-menu li a {
   padding-left: 61px;
