--- a/assets/css/table.css
+++ b/assets/css/table.css
@@ -7,6 +7,7 @@ table {
         background: #ff826e; 
         color: #f4f6f9; 
         font-weight: bold;
+        text-align: center !important;
         }
 
     td, th { 
