table css change

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -944,7 +944,8 @@ table tr:hover .table-links {
 
 @media (max-width: 575.98px) {
   .table-responsive table {
-    min-width: 800px; } }
+    min-width: 0px; 
+  } }
 
 /* 3.7 Tooltip */
 .tooltip {
