--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2963,3 +2963,11 @@ body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu li.active ul.dropdown-men
   100% {
     -webkit-transform: scale(1.2, 1.2);
     opacity: 0.0; } }
+
+
+
+    .modal-backdrop
+    {
+      z-index: 0 !important;
+      background-color: transparent !important;
+    }
