--- a/assets/css/table.css
+++ b/assets/css/table.css
@@ -49,7 +49,8 @@ table {
             border: none;
             border-bottom: 1px solid #eee; 
             position: relative;
-            padding-left: 35%; 
+            padding-left: 35%;
+            font-size: 1.1em;
         }
 
         .copy-td
