admin theme color changed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2655,7 +2655,7 @@ pre {
 	height: 350px;
 }
 .shadow-primary {
-	box-shadow: 0 2px 6px #313236;
+	box-shadow: 0 2px 6px #31323682;
 }
 .shadow-secondary {
 	box-shadow: 0 2px 6px #e1e5e8;
