--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@
 	outline: none;
 }
 a {
-	color: #221f20;
+	color: #0a0a0a;
 	font-weight: 500;
 	transition: all .5s;
 	-webkit-transition: all .5s;
@@ -70,7 +70,7 @@ a:not(.btn-social-icon):not(.btn-social):not(.page-link) .fab {
 	margin-left: 4px;
 }
 .bg-primary {
-	background-color: #221f20 !important;
+	background-color: #0a0a0a !important;
 }
 .bg-secondary {
 	background-color: #cdd3d8 !important;
@@ -97,7 +97,7 @@ a:not(.btn-social-icon):not(.btn-social):not(.page-link) .fab {
 .text-primary-all *,
 .text-primary-all *:before,
 .text-primary-all *:after {
-	color: #221f20 !important;
+	color: #0a0a0a !important;
 }
 .text-secondary,
 .text-secondary-all *,
@@ -192,7 +192,7 @@ ol {
 .custom-select:focus,
 .custom-file-label:focus {
 	background-color: #fefeff;
-	border-color: #221f20;
+	border-color: #0a0a0a;
 }
 .input-group-text,
 select.form-control:not([size]):not([multiple]),
@@ -272,7 +272,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 .custom-radio .custom-control-input:checked ~ .custom-control-label::before,
 .custom-control-input:checked ~ .custom-control-label::before {
-	background-color: #221f20 !important;
+	background-color: #0a0a0a !important;
 }
 .custom-file-label {
 	line-height: 2.2;
@@ -289,7 +289,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 .custom-file-input:focus + .custom-file-label {
 	box-shadow: none;
-	border-color: #221f20;
+	border-color: #0a0a0a;
 }
 .custom-file-input:focus + .custom-file-label:after {
 	border-color: transparent;
@@ -347,7 +347,7 @@ select.form-control:not([size]):not([multiple]) {
 	font-size: 14px;
 }
 .selectgroup-input:checked + .selectgroup-button {
-	background-color: #221f20;
+	background-color: #0a0a0a;
 	color: #fff;
 	z-index: 1;
 }
@@ -408,13 +408,13 @@ select.form-control:not([size]):not([multiple]) {
 	transition: .3s left;
 }
 .custom-switch-input:checked ~ .custom-switch-indicator {
-	background: #221f20;
+	background: #0a0a0a;
 }
 .custom-switch-input:checked ~ .custom-switch-indicator:before {
 	left: calc(1rem + 1px);
 }
 .custom-switch-input:focus ~ .custom-switch-indicator {
-	border-color: #221f20;
+	border-color: #0a0a0a;
 }
 .custom-switch-description {
 	margin-left: .5rem;
@@ -444,7 +444,7 @@ select.form-control:not([size]):not([multiple]) {
 	position: relative;
 }
 .imagecheck-input:focus ~ .imagecheck-figure {
-	border-color: #221f20;
+	border-color: #0a0a0a;
 }
 .imagecheck-input:checked ~ .imagecheck-figure {
 	border-color: rgba(0, 40, 100, 0.24);
@@ -559,13 +559,13 @@ select.form-control:not([size]):not([multiple]) {
 	border-bottom: none;
 }
 .list-group-item.active {
-	background-color: #221f20;
+	background-color: #0a0a0a;
 }
 .list-group-item.disabled {
 	color: #c9d7e0;
 }
 .list-group-item-primary {
-	background-color: #221f20;
+	background-color: #0a0a0a;
 	color: #fff;
 }
 .list-group-item-secondary {
@@ -637,7 +637,7 @@ select.form-control:not([size]):not([multiple]) {
 	color: #fff;
 }
 .alert.alert-primary {
-	background-color: #221f20;
+	background-color: #0a0a0a;
 }
 .alert.alert-secondary {
 	background-color: #cdd3d8;
@@ -729,7 +729,7 @@ select.form-control:not([size]):not([multiple]) {
 .card .card-header h4 {
 	font-size: 16px;
 	line-height: 28px;
-	color: #221f20;
+	color: #0a0a0a;
 	padding-right: 10px;
 	margin-bottom: 0;
 }
@@ -747,7 +747,7 @@ select.form-control:not([size]):not([multiple]) {
 .card .card-header h4 + .card-header-action .btn.active,
 .card .card-header h4 + .card-header-form .btn.active {
 	box-shadow: 0 2px 6px #313236;
-	background-color: #221f20;
+	background-color: #0a0a0a;
 	color: #fff;
 }
 .card .card-header h4 + .card-header-action .dropdown,
@@ -820,7 +820,7 @@ select.form-control:not([size]):not([multiple]) {
 	background-position: center;
 }
 .card.card-primary {
-	border-top: 2px solid #221f20;
+	border-top: 2px solid #0a0a0a;
 }
 .card.card-secondary {
 	border-top: 2px solid #cdd3d8;
@@ -842,7 +842,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 .card.card-hero .card-header {
 	padding: 40px;
-	background-image: linear-gradient(to bottom, #221f20, #221f20);
+	background-image: linear-gradient(to bottom, #0a0a0a, #0a0a0a);
 	color: #fff;
 	overflow: hidden;
 	height: auto;
@@ -1212,7 +1212,7 @@ table tr:hover .table-links {
 /* 3.9 Nav */
 
 .nav-tabs .nav-item .nav-link {
-	color: #221f20;
+	color: #0a0a0a;
 }
 .nav-tabs .nav-item .nav-link.active {
 	color: #000;
@@ -1229,10 +1229,10 @@ table tr:hover .table-links {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #221f20;
+	background-color: #0a0a0a;
 }
 .nav-pills .nav-item .nav-link {
-	color: #221f20;
+	color: #0a0a0a;
 	padding-left: 15px !important;
 	padding-right: 15px !important;
 }
@@ -1242,7 +1242,7 @@ table tr:hover .table-links {
 .nav-pills .nav-item .nav-link.active {
 	box-shadow: 0 2px 6px #313236;
 	color: #fff;
-	background-color: #221f20;
+	background-color: #0a0a0a;
 }
 .nav-pills .nav-item .nav-link .badge {
 	padding: 5px 8px;
@@ -1259,18 +1259,18 @@ table tr:hover .table-links {
 /* 3.10 Pagination */
 
 .page-item .page-link {
-	color: #221f20;
+	color: #0a0a0a;
 	border-radius: 3px;
 	margin: 0 3px;
 }
 .page-item.active .page-link {
-	background-color: #221f20;
-	border-color: #221f20;
+	background-color: #0a0a0a;
+	border-color: #0a0a0a;
 }
 .page-item.disabled .page-link {
 	border-color: transparent;
 	background-color: #f9fafe;
-	color: #221f20;
+	color: #0a0a0a;
 	opacity: .6;
 }
 .page-link {
@@ -1279,7 +1279,7 @@ table tr:hover .table-links {
 	font-weight: 600;
 }
 .page-link:hover {
-	background-color: #221f20;
+	background-color: #0a0a0a;
 	color: #fff;
 	border-color: transparent;
 }
@@ -1303,7 +1303,7 @@ table tr:hover .table-links {
 	color: #fff;
 }
 .badge.badge-primary {
-	background-color: #221f20;
+	background-color: #0a0a0a;
 }
 .badge.badge-secondary {
 	background-color: #cdd3d8;
@@ -1656,8 +1656,8 @@ h6 .badge {
 .btn-primary,
 .btn-primary.disabled {
 	box-shadow: 0 2px 6px #313236;
-	background-color: #221f20;
-	border-color: #221f20;
+	background-color: #0a0a0a;
+	border-color: #0a0a0a;
 }
 .btn-primary:focus,
 .btn-primary.disabled:focus {
@@ -1675,8 +1675,8 @@ h6 .badge {
 }
 .btn-outline-primary,
 .btn-outline-primary.disabled {
-	border-color: #221f20;
-	color: #221f20;
+	border-color: #0a0a0a;
+	color: #0a0a0a;
 }
 .btn-outline-primary:hover,
 .btn-outline-primary:focus,
@@ -1684,7 +1684,7 @@ h6 .badge {
 .btn-outline-primary.disabled:hover,
 .btn-outline-primary.disabled:focus,
 .btn-outline-primary.disabled:active {
-	background-color: #221f20 !important;
+	background-color: #0a0a0a !important;
 	color: #fff;
 }
 .btn-outline-white,
@@ -1699,7 +1699,7 @@ h6 .badge {
 .btn-outline-white.disabled:focus,
 .btn-outline-white.disabled:active {
 	background-color: #fff;
-	color: #221f20;
+	color: #0a0a0a;
 }
 .btn-round {
 	border-radius: 30px;
@@ -1733,7 +1733,7 @@ h6 .badge {
 	color: #000 !important;
 }
 .btn-group .btn.active {
-	background-color: #221f20;
+	background-color: #0a0a0a;
 	color: #fff;
 }
 .btn-progress {
@@ -1748,7 +1748,7 @@ h6 .badge {
 
 .media .media-right {
 	float: right;
-	color: #221f20;
+	color: #0a0a0a;
 	font-weight: 600;
 	font-size: 16px;
 }
@@ -1853,7 +1853,7 @@ h6 .badge {
 }
 .accordion .accordion-header[aria-expanded="true"] {
 	box-shadow: 0 2px 6px #313236;
-	background-color: #221f20;
+	background-color: #0a0a0a;
 	color: #fff;
 }
 .accordion .accordion-body {
@@ -1921,7 +1921,7 @@ h6 .badge {
 	background-color: transparent;
 }
 .navbar.active {
-	background-color: #221f20;
+	background-color: #0a0a0a;
 	box-shadow: rgba(103, 119, 239, 0.2) rgba(0, 0, 0, 0.03);
 }
 .navbar-bg {
@@ -1931,7 +1931,7 @@ h6 .badge {
 	left: 0;
 	width: 100%;
 	height: 115px;
-	background-color: #221f20;
+	background-color: #0a0a0a;
 	z-index: -1;
 }
 .navbar {
@@ -2173,11 +2173,11 @@ h6 .badge {
 	}
 	.nav-collapse .navbar-nav .nav-item .nav-link:hover {
 		background-color: #fcfcfd;
-		color: #221f20;
+		color: #0a0a0a;
 	}
 	.nav-collapse .navbar-nav .nav-item:focus > a,
 	.nav-collapse .navbar-nav .nav-item.active > a {
-		background-color: #221f20;
+		background-color: #0a0a0a;
 		color: #fff;
 	}
 	.navbar {
@@ -2236,7 +2236,7 @@ a.dropdown-item {
 a.dropdown-item:focus,
 a.dropdown-item:active,
 a.dropdown-item.active {
-	background-color: #221f20;
+	background-color: #0a0a0a;
 	color: #fff !important;
 }
 .dropdown-divider {
@@ -2292,7 +2292,7 @@ a.dropdown-item.active {
 	margin-bottom: 0;
 }
 .dropdown-list .dropdown-item:focus {
-	background-color: #221f20;
+	background-color: #0a0a0a;
 }
 .dropdown-list .dropdown-item:focus .dropdown-item-desc {
 	color: #fff !important;
@@ -2376,7 +2376,7 @@ a.dropdown-item.active {
 	margin-top: -6px;
 }
 .dropdown-flag .dropdown-item.active {
-	background-color: #221f20;
+	background-color: #0a0a0a;
 	color: #fff;
 }
 @media (max-width: 575.98px) {
@@ -2399,7 +2399,7 @@ a.dropdown-item.active {
 /* 3.21 Progress Bar */
 
 .progress-bar {
-	background-color: #221f20;
+	background-color: #0a0a0a;
 }
 /* 3.22 Jumbotron */
 
@@ -2418,7 +2418,7 @@ a.dropdown-item.active {
 
 :root {
 	/* Colors */
-	--primary: #221f20;
+	--primary: #0a0a0a;
 	--secondary: #34395e;
 	--success: #47c363;
 	--info: #3abaf4;
@@ -2440,7 +2440,7 @@ body {
 }
 a.bb {
 	text-decoration: none;
-	border-bottom: 1px solid #221f20;
+	border-bottom: 1px solid #0a0a0a;
 	padding-bottom: 1px;
 }
 .form-divider {
@@ -2611,8 +2611,8 @@ pre {
 	text-align: center;
 }
 .circle-step .circle.circle-primary {
-	border-color: #221f20;
-	color: #221f20;
+	border-color: #0a0a0a;
+	color: #0a0a0a;
 }
 .pe-none {
 	pointer-events: none;
@@ -2848,7 +2848,7 @@ pre {
 	margin-right: 15px;
 }
 .section .section-header .section-header-back .btn:hover {
-	background-color: #221f20;
+	background-color: #0a0a0a;
 	color: #fff;
 }
 .section .section-header .section-header-button {
@@ -2877,7 +2877,7 @@ pre {
 	border-radius: 5px;
 	height: 8px;
 	width: 30px;
-	background-color: #221f20;
+	background-color: #0a0a0a;
 	display: inline-block;
 	float: left;
 	margin-top: 6px;
@@ -3065,7 +3065,7 @@ body.sidebar-mini .main-sidebar .sidebar-menu > li > a.has-dropdown:after {
 }
 body.sidebar-mini .main-sidebar .sidebar-menu > li.active > a {
 	box-shadow: 0 4px 8px #313236;
-	background-color: #221f20;
+	background-color: #0a0a0a;
 	color: #fff;
 }
 body.sidebar-mini .main-sidebar .sidebar-menu > li ul.dropdown-menu {
@@ -3081,7 +3081,7 @@ body.sidebar-mini .main-sidebar .sidebar-menu > li ul.dropdown-menu li > a:focus
 body.sidebar-mini .main-sidebar .sidebar-menu > li ul.dropdown-menu li.active > a,
 body.sidebar-mini .main-sidebar .sidebar-menu > li ul.dropdown-menu li.active > a:hover {
 	color: #fff;
-	background-color: #221f20 !important;
+	background-color: #0a0a0a !important;
 }
 body.sidebar-mini .main-sidebar .sidebar-menu > li ul.dropdown-menu li a {
 	height: 40px;
@@ -3155,7 +3155,7 @@ body.layout-2 .main-sidebar .sidebar-menu li a.has-dropdown:after {
 	right: 0;
 }
 body.layout-2 .main-sidebar .sidebar-menu li a:hover {
-	color: #221f20;
+	color: #0a0a0a;
 	background-color: transparent;
 }
 body.layout-2 .main-sidebar .sidebar-menu li ul.dropdown-menu li a {
@@ -3194,7 +3194,7 @@ body.layout-3 .navbar.navbar-secondary {
 	z-index: 889;
 }
 body.layout-3 .navbar.navbar-secondary .navbar-nav > .nav-item.active > .nav-link {
-	color: #221f20;
+	color: #0a0a0a;
 }
 body.layout-3 .navbar.navbar-secondary .navbar-nav > .nav-item.active > .nav-link:before {
 	left: 35px;
@@ -3240,7 +3240,7 @@ body.layout-3 .navbar.navbar-secondary .navbar-nav > .nav-item > .nav-link:befor
 	right: initial;
 	bottom: 0;
 	height: 2px;
-	background-color: #221f20;
+	background-color: #0a0a0a;
 	transition: all .5s;
 }
 body.layout-3 .navbar.navbar-secondary .navbar-nav > .nav-item > .nav-link span {
@@ -3287,7 +3287,7 @@ body.layout-3 .navbar.navbar-secondary .navbar-nav > .nav-item .dropdown-menu .n
 }
 body.layout-3 .navbar.navbar-secondary .navbar-nav > .nav-item .dropdown-menu .nav-item.active > .nav-link,
 body.layout-3 .navbar.navbar-secondary .navbar-nav > .nav-item .dropdown-menu .nav-item .nav-link:focus {
-	background-color: #221f20;
+	background-color: #0a0a0a;
 	color: #fff;
 }
 body.layout-3 .main-content {
@@ -3378,7 +3378,7 @@ body.layout-3 .main-footer {
 	background-color: #f8fafb;
 }
 .main-sidebar .sidebar-menu li.active a {
-	color: #221f20;
+	color: #0a0a0a;
 	font-weight: 600;
 	background-color: #f4f6f9;
 }
@@ -3419,11 +3419,11 @@ body.layout-3 .main-footer {
 	font-weight: 400;
 }
 .main-sidebar .sidebar-menu li ul.dropdown-menu li a:hover {
-	color: #221f20;
+	color: #0a0a0a;
 	background-color: inherit;
 }
 .main-sidebar .sidebar-menu li ul.dropdown-menu li.active > a {
-	color: #221f20;
+	color: #0a0a0a;
 	font-weight: 600;
 }
 .main-sidebar .sidebar-menu li ul.dropdown-menu li a i {
@@ -3460,14 +3460,14 @@ body.layout-3 .main-footer {
 	margin-bottom: 40px;
 }
 body:not(.sidebar-mini) .sidebar-style-1 .sidebar-menu li.active a {
-	background-color: #221f20;
+	background-color: #0a0a0a;
 	color: #fff;
 }
 body:not(.sidebar-mini) .sidebar-style-1 .sidebar-menu li.active ul.dropdown-menu li a {
 	color: #e8ebfd;
 }
 body:not(.sidebar-mini) .sidebar-style-1 .sidebar-menu li.active ul.dropdown-menu li a:hover {
-	background-color: #221f20;
+	background-color: #0a0a0a;
 	color: #fff;
 }
 body:not(.sidebar-mini) .sidebar-style-1 .sidebar-menu li.active ul.dropdown-menu li.active a {
@@ -3486,7 +3486,7 @@ body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu > li.active > a:before {
 	transform: translateY(-50%);
 	height: 25px;
 	width: 4px;
-	background-color: #221f20;
+	background-color: #0a0a0a;
 }
 body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu li.active ul.dropdown-menu li a {
 	padding-left: 61px;
