--- a/assets/css/table.css
+++ b/assets/css/table.css
@@ -4,7 +4,7 @@ table {
     }
 
     th { 
-        background: #221f20; 
+        background: #0a0a0a; 
         color: #f4f6f9; 
         font-weight: bold;
         text-align: center !important;
@@ -13,7 +13,7 @@ table {
 
     td, th { 
         padding: 10px 5px 10px 5px; 
-        border: 2px solid #221f200a; 
+        border: 2px solid #0a0a0a0a; 
         text-align: center; 
         font-size: 0.9rem;
         border-radius: 5px;
