--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3027,7 +3027,7 @@ body.sidebar-mini .main-sidebar .sidebar-brand-sm {
 	display: block;
 }
 body.sidebar-mini .main-sidebar .sidebar-menu > li {
-	padding: 10px;
+	padding: 5px 10px;
 }
 body.sidebar-mini .main-sidebar .sidebar-menu > li.menu-header {
 	padding: 0;
